[gd_scene load_steps=19 format=2]

[ext_resource path="res://KinematicBody2Dphilltres.gd" type="Script" id=1]
[ext_resource path="res://Camera Roll/tv.png" type="Texture" id=2]
[ext_resource path="res://Camera Roll/tela.png" type="Texture" id=3]
[ext_resource path="res://telaphilltres.gd" type="Script" id=4]
[ext_resource path="res://Camera Roll/parado.png" type="Texture" id=5]
[ext_resource path="res://Camera Roll/andarum.png" type="Texture" id=6]
[ext_resource path="res://Camera Roll/ardardois.png" type="Texture" id=7]
[ext_resource path="res://passinhodois.mp3" type="AudioStream" id=8]
[ext_resource path="res://preto.png" type="Texture" id=9]
[ext_resource path="res://Phillcabeca.gd" type="Script" id=10]
[ext_resource path="res://SCARY SCREAM (320 kbps).mp3" type="AudioStream" id=11]
[ext_resource path="res://phillcabeca.png" type="Texture" id=12]
[ext_resource path="res://phillcabeçamal.png" type="Texture" id=13]
[ext_resource path="res://Camera Roll/fundo.png" type="Texture" id=53]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), SubResource( 4 ) ],
"loop": true,
"name": "andar",
"speed": 2.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "parar",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 18.25, 40 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 30.5, 297.5 )

[node name="Node2D" type="Node2D"]
position = Vector2( -21, -13 )
script = ExtResource( 4 )

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 535, 366 )
scale = Vector2( 6.44375, 5.16875 )
texture = ExtResource( 53 )

[node name="Preto" type="Sprite" parent="."]
position = Vector2( 525.5, 313 )
scale = Vector2( 0.189429, 0.125714 )
texture = ExtResource( 9 )

[node name="Phillcabeca" type="Sprite" parent="."]
position = Vector2( 521, 264 )
scale = Vector2( 4.28125, 4.3875 )
texture = ExtResource( 12 )
script = ExtResource( 10 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 408, 334 )
script = ExtResource( 1 )

[node name="Passos" type="AudioStreamPlayer2D" parent="KinematicBody2D"]
position = Vector2( -408, -334 )
stream = ExtResource( 8 )
autoplay = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( -2.00002, 6.99997 )
scale = Vector2( 7.3125, 7.3125 )
frames = SubResource( 5 )
animation = "parar"

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -5.25, -4 )
shape = SubResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 282.0
margin_top = 137.0
margin_right = 786.0
margin_bottom = 203.0
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
text = "Você não deveria estar aqui.
Sabe disso, não  é?"
autowrap = true

[node name="Phillcabecamal" type="Sprite" parent="."]
visible = false
position = Vector2( 523.25, 290 )
scale = Vector2( 1.03372, 0.826087 )
texture = ExtResource( 13 )

[node name="Tv" type="Sprite" parent="."]
position = Vector2( 560, 337.453 )
scale = Vector2( 9.925, 7.03184 )
texture = ExtResource( 2 )

[node name="Tela" type="Sprite" parent="."]
visible = false
position = Vector2( 571, 359 )
scale = Vector2( 10.6906, 7.95469 )
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 231, 277 )
shape = SubResource( 7 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 821, 271 )
shape = SubResource( 7 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="Button" type="Button" parent="."]
margin_left = 279.0
margin_top = 200.0
margin_right = 319.0
margin_bottom = 220.0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "Sim."
flat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 24.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 17.0
one_shot = true
autostart = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 22.5
one_shot = true
autostart = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
